# kore

./: .gitignore  Dockerfile  Makefile  README.md  apitest.http  go.mod  go.sum
.github/workflows/: backend.yml  ci.yml  go.yml
api/: apitest.http
api/gateway/: deployment.yaml  krakend.json  symmetric.json
backend/: .env.sh  .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  go.mod  go.sum  go.work  go.work.sum
backend/api/: .gitignore
backend/cmd/: main.go  wire.go  wire_gen.go
backend/domain/: domain.go
backend/korecli/: BUILD.bazel  main.go
backend/korecli/cmd/: BUILD.bazel  create.go
backend/korecli/tpl/: BUILD.bazel  cmd.go  handler.go  repo.go  server.go  service.go
backend/pkg/: BUILD.bazel  README.md  go.mod  go.sum  pkg.go  provider.go
backend/pkg/auth/otp/: BUILD.bazel  otp.go  otp_test.go
backend/pkg/auth/password/: BUILD.bazel
backend/pkg/auth/token/: BUILD.bazel
backend/pkg/broker/rabbit/: BUILD.bazel  payload.go  payload_test.go  rabbit.go  rabbit_test.go
backend/pkg/codes/: BUILD.bazel  codes.go
backend/pkg/config/: BUILD.bazel  broker_config.go  config.go  email_config.go  firestore_config.go  postgres_config.go  token_config.go
backend/pkg/config/internal/: broker_config.go  email_config.go  firestore_config.go  postgres_config.go  redis_config.go  token_config.go
backend/pkg/crypto/: BUILD.bazel  aes.go
backend/pkg/ctxt/: cancel.go  cancel_test.go  user_ctxt.go  user_ctxt_test.go
backend/pkg/datetime/: time.go
backend/pkg/db/: BUILD.bazel  firestore.go  postgres.go  provider.go
backend/pkg/db/migrations/: 000001_create_table_todos.up.sql  000002_create_table_users.up.sql  000003_create_table_auth_activities.up.sql  000004_create_table_products.up.sql  000005_create_table_product_category.up.sql  000006_create_table_product_inventory.up.sql  000007_create_table_discounts.up.sql  000008_create_table_carts.up.sql  000009_create_table_orders.up.sql  000010_create_table_shipping.down.sql  000010_create_table_shipping.up.sql
backend/pkg/db/migrations/auth/: 000002_create_table_auth_activities.down.sql  000002_create_table_auth_activities.up.sql
backend/pkg/db/redis/: connection.go
backend/pkg/email/brevo/: client.go
backend/pkg/email/mailtrap/: client.go
backend/pkg/entity/: BUILD.bazel  cart.go  chat.go  default.go  discount.go  doc.go  order.go  otp.go  payload.go  payload_test.go  product.go  product_category.go  product_inventory.go  rabbit.go  request.go  response.go  shipping.go  todo.go  user.go
backend/pkg/feature/: feature.go
backend/pkg/log/: BUILD.bazel  log.go  provider.go
backend/pkg/logger/: logger.go
backend/pkg/mail/: BUILD.bazel  mail.go  mail_test.go
backend/pkg/mail/templates/: BUILD.bazel  otp.go  otp_test.go
backend/pkg/messages/: BUILD.bazel  auth_messages.go  otp_messages.go
backend/pkg/middleware/: auth_middleware.go
backend/pkg/model/: BUILD.bazel  auth.go  cart.go  discount.go  doc.go  order.go  otp.go  product.go  product_category.go  product_inventory.go  shipping.go  todo.go  user.go
backend/pkg/net/rabbit/: BUILD.bazel  payload.go  payload_test.go  rabbit.go
backend/pkg/net/websocket/: BUILD.bazel  client.go  pool.go
backend/pkg/password/: BUILD.bazel  password.go
backend/pkg/path/: BUILD.bazel
backend/pkg/perrors/: auth_errors.go
backend/pkg/pkgerr/: login_error.go
backend/pkg/repo/: BUILD.bazel  auth.go  cart.go  discount.go  doc.go  greet.go  order.go  otp.go  product.go  product_category.go  shipping.go  todo.go  user.go
backend/pkg/security/otp/: BUILD.bazel  otp.go  otp_test.go
backend/pkg/security/password/: BUILD.bazel  password.go
backend/pkg/security/token/: BUILD.bazel  token.go
backend/pkg/shipping/: BUILD.bazel  jne.go  shipping.go
backend/pkg/status/: BUILD.bazel  status.go
backend/pkg/svcerr/: BUILD.bazel  auth_errors.go  otp_errors.go
backend/pkg/token/: BUILD.bazel  token.go
backend/pkg/transaction/: BUILD.bazel  credit_card.go  gopay.go  payment_method.go
backend/pkg/types/: BUILD.bazel  money.go
backend/pkg/uuid/: BUILD.bazel  uuid.go
backend/pkg/validation/: validation.go  validation_test.go
backend/pkg/websocket/: BUILD.bazel  client.go  pool.go  provider.go  websocket.go
backend/scripts/: build.sh  deployment.sh  doc.sh  env.sh  lint.sh  wire.sh
backend/services/: .gitignore  README.md
backend/services/auth/cmd/: BUILD.bazel  main.go  wire.go  wire_gen.go
backend/services/auth/repo/: BUILD.bazel  auth_repo.go  provider.go  user_repo.go
backend/services/auth/service/: BUILD.bazel  auth_service.go
backend/services/auth/usecase/: BUILD.bazel  auth_usecase.go
backend/services/chat/cmd/: BUILD.bazel  main.go  wire.go  wire_gen.go
backend/services/chat/repo/: BUILD.bazel  chat_repo.go  provider.go
backend/services/chat/service/: BUILD.bazel  chat_service.go  provider.go
backend/services/chat/usecase/: BUILD.bazel  chat_usecase.go
backend/services/order/cmd/: BUILD.bazel  main.go  wire.go  wire_gen.go
backend/services/order/handler/: BUILD.bazel  order_handler.go
backend/services/order/repo/: BUILD.bazel  order_repo.go  order_repo_test.go  provider.go
backend/services/order/usecase/: BUILD.bazel  order_usecase.go  provider.go
cmd/: main.go  wire.go  wire_gen.go
deployment/k8s/: deployment.yaml  env.yaml
doc/: apispec.yaml
frontend/: README.md  package-lock.json  package.json
frontends/: package.json
internal/config/: config.go  firestore_config.go
internal/database/: provider.go
internal/entity/: todo_entity.go
internal/errors/: error.go
internal/handler/: todo_handler.go
internal/model/: todo.go
internal/pkg/: provider.go
internal/repository/: provider.go  todo_repository.go  user_repository.go
internal/server/: grpc.go  http.go  provider.go  router.go
internal/service/: auth_service.go  provider.go  todo_service.go
internal/usecase/: auth_usecase.go  provider.go  (+1 more)
kore-cli/: main.go
korecli/: go.mod  go.sum  main.go
pkg/: provider.go
scripts/: build.sh  deployment.sh  grpc.sh  wire.sh
test/: .gitignore
(+529 files in other folders)
