load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "korecli_lib",
    srcs = ["main.go"],
    importpath = "github.com/billykore/kore/backend/korecli",
    visibility = ["//visibility:private"],
    deps = ["//korecli/cmd"],
)

go_binary(
    name = "korecli",
    embed = [":korecli_lib"],
    visibility = ["//visibility:public"],
)
