load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "create.go",
        "remove.go",
        "root.go",
    ],
    importpath = "github.com/billykore/kore/backend/korecli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//korecli/tpl",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)
