load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "create.go",
        "remove.go",
        "root.go",
    ],
    importpath = "github.com/billykore/kore/backend/korecli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//korecli/tpl",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_x_text//cases:go_default_library",
        "@org_golang_x_text//language:go_default_library",
    ],
)
