load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tpl",
    srcs = [
        "cmd.go",
        "deployment.go",
        "dockerfile.go",
        "entity.go",
        "handler.go",
        "repo.go",
        "server.go",
        "usecase.go",
    ],
    importpath = "github.com/billykore/kore/backend/korecli/tpl",
    visibility = ["//visibility:public"],
)
