load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "broker_config.go",
        "config.go",
        "email_config.go",
        "firestore_config.go",
        "postgres_config.go",
        "token_config.go",
    ],
    importpath = "github.com/billykore/kore/backend/pkg/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kelseyhightower_envconfig//:envconfig"],
)
