load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = ["postgres.go"],
    importpath = "github.com/billykore/kore/backend/pkg/db",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "@io_gorm_driver_postgres//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
    ],
)
