load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "entity",
    srcs = [
        "auth.go",
        "book.go",
        "cart.go",
        "chat.go",
        "default.go",
        "discount.go",
        "product.go",
        "product_category.go",
        "product_inventory.go",
        "response.go",
        "todo.go",
    ],
    importpath = "github.com/billykore/kore/backend/pkg/entity",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model",
        "//pkg/status",
    ],
)
