load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "log",
    srcs = [
        "log.go",
        "provider.go",
    ],
    importpath = "github.com/billykore/kore/backend/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_wire//:wire",
        "@org_uber_go_zap//:zap",
    ],
)
