load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mail",
    srcs = ["mail.go"],
    importpath = "github.com/billykore/kore/backend/pkg/mail",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@in_gopkg_gomail_v2//:go_default_library",
    ],
)

go_test(
    name = "mail_test",
    srcs = ["mail_test.go"],
    embed = [":mail"],
    deps = ["@com_github_stretchr_testify//assert"],
)
