load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = [
        "auth.go",
        "cart.go",
        "discount.go",
        "doc.go",
        "greet.go",
        "order.go",
        "otp.go",
        "product.go",
        "product_category.go",
        "product_inventory.go",
        "shipping.go",
        "todo.go",
        "user.go",
    ],
    importpath = "github.com/billykore/kore/backend/pkg/model",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/types",
        "@io_gorm_gorm//:gorm",
    ],
)
