load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "auth.go",
        "greet.go",
        "product.go",
        "todo.go",
        "user.go",
    ],
    importpath = "github.com/billykore/kore/backend/pkg/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model",
        "@org_golang_x_net//context:go_default_library",
    ],
)
