load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "token",
    srcs = ["token.go"],
    importpath = "github.com/billykore/kore/backend/pkg/token",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@com_github_golang_jwt_jwt//:jwt",
    ],
)
