load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transaction",
    srcs = [
        "credit_card.go",
        "gopay.go",
        "payment_method.go",
        "transfer_method.go",
    ],
    importpath = "github.com/billykore/kore/backend/pkg/transaction",
    visibility = ["//visibility:public"],
    deps = ["//pkg/types"],
)
