load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "websocket",
    srcs = [
        "client.go",
        "pool.go",
        "provider.go",
        "websocket.go",
    ],
    importpath = "github.com/billykore/kore/backend/pkg/websocket",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_google_wire//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)
