load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "templates",
    srcs = ["otp.go"],
    embedsrcs = ["otp.gohtml"],
    importpath = "github.com/billykore/kore/backend/pkg/mail/templates",
    visibility = ["//visibility:public"],
)

go_test(
    name = "templates_test",
    srcs = ["otp_test.go"],
    embed = [":templates"],
    deps = ["@com_github_stretchr_testify//assert"],
)
