load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rabbit",
    srcs = [
        "payload.go",
        "rabbit.go",
    ],
    importpath = "github.com/billykore/kore/backend/pkg/net/rabbit",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
    ],
)

go_test(
    name = "rabbit_test",
    srcs = [
        "payload_test.go",
        "rabbit_test.go",
    ],
    embed = [":rabbit"],
    deps = [
        "//pkg/config",
        "//pkg/entity",
        "//pkg/log",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
        "@com_github_stretchr_testify//assert",
    ],
)
