load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "websocket",
    srcs = [
        "client.go",
        "pool.go",
        "websocket.go",
    ],
    importpath = "github.com/billykore/kore/backend/pkg/net/websocket",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
    ],
)
