load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/billykore/kore/backend/services/auth/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//services/auth/server",
        "@com_github_joho_godotenv//autoload",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
