load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "auth_repo.go",
        "provider.go",
        "user_repo.go",
    ],
    importpath = "github.com/billykore/kore/backend/services/auth/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/db",
        "//pkg/model",
        "//pkg/perrors",
        "//pkg/repo",
        "@com_github_google_wire//:wire",
        "@com_google_cloud_go_firestore//:firestore",
    ],
)
