load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "auth_service.go",
        "provider.go",
    ],
    importpath = "github.com/billykore/kore/backend/services/auth/service",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/entity",
        "//services/auth/usecase",
        "@com_github_google_wire//:go_default_library",
        "@com_github_labstack_echo_v4//:go_default_library",
    ],
)
