load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecase",
    srcs = [
        "auth_usecase.go",
        "provider.go",
    ],
    importpath = "github.com/billykore/kore/backend/services/auth/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/codes",
        "//pkg/entity",
        "//pkg/log",
        "//pkg/messages",
        "//pkg/model",
        "//pkg/password",
        "//pkg/perrors",
        "//pkg/repo",
        "//pkg/status",
        "//pkg/token",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_google_wire//:go_default_library",
    ],
)
