load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/billykore/kore/backend/services/chat/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "//pkg/websocket",
        "//services/chat/repo",
        "//services/chat/server",
        "//services/chat/service",
        "//services/chat/usecase",
        "@com_github_joho_godotenv//autoload:go_default_library",
        "@com_github_labstack_echo_v4//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
