load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/billykore/kore/backend/services/chat/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/log",
        "//pkg/websocket",
        "//services/chat/handler",
        "//services/chat/repo",
        "//services/chat/server",
        "//services/chat/usecase",
        "@com_github_joho_godotenv//autoload",
        "@com_github_labstack_echo_v4//:echo",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
