load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "chat_service.go",
        "provider.go",
    ],
    importpath = "github.com/billykore/kore/backend/services/chat/service",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/websocket",
        "//services/chat/usecase",
        "@com_github_google_wire//:wire",
        "@com_github_labstack_echo_v4//:echo",
    ],
)
