load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/billykore/kore/backend/services/order/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/db",
        "//pkg/log",
        "//services/order/handler",
        "//services/order/repo",
        "//services/order/server",
        "//services/order/usecase",
        "@com_github_joho_godotenv//autoload",
        "@com_github_labstack_echo_v4//:echo",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
