load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repo",
    srcs = [
        "order_repo.go",
        "provider.go",
    ],
    importpath = "github.com/billykore/kore/backend/services/order/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model",
        "//pkg/repo",
        "@com_github_google_wire//:wire",
        "@io_gorm_gorm//:gorm",
    ],
)

go_test(
    name = "repo_test",
    srcs = ["order_repo_test.go"],
    embed = [":repo"],
    deps = [
        "//pkg/config",
        "//pkg/db",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_stretchr_testify//assert",
    ],
)
