load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecase",
    srcs = [
        "order_usecase.go",
        "provider.go",
    ],
    importpath = "github.com/billykore/kore/backend/services/order/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/codes",
        "//pkg/entity",
        "//pkg/log",
        "//pkg/model",
        "//pkg/repo",
        "//pkg/shipping",
        "//pkg/status",
        "//pkg/transaction",
        "@com_github_google_wire//:wire",
    ],
)
